initial site files

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>About</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css" rel="stylesheet">
 </head>
 
-<body style="background-image: url('qbkls.png')">
+<body style="background-image: url('assets/images/qbkls.png')">
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-white pt-5 pb-3">
             <div class="container">
@@ -56,7 +56,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12 col-sm-12 col-xs-12">
-                            <img src="images/portpic6.jpg" class="float-left mr-4 mb-1">
+                            <img src="assets/images/portpic6.jpg" class="float-left mr-4 mb-1">
                             <p style="line-height: 200%">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta quae illum repudiandae alias autem dolorem! Lorem ipsum dolor
                                 sit amet consectetur adipisicing elit. Deleniti ducimus quia animi labore impedit voluptate
