--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,10 @@
     <title>Contact</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css" rel="stylesheet">
 </head>
 
-<body style="background-image: url('qbkls.png')">
+<body style="background-image: url('assets/images/qbkls.png')">
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-white pt-5 pb-3">
             <div class="container">
