--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,10 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css" rel="stylesheet">
 </head>
 
-<body style="background-image: url('qbkls.png')">
+<body style="background-image: url('assets/images/qbkls.png')">
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-white pt-5 pb-3">
             <div class="container">
@@ -58,12 +58,12 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-6 col-sm-12 col-xs-12 mb-5">
-                                <img src="images/portpic1.jpg">
+                                <img src="assets/images/portpic1.jpg">
                                 <div class="h3 pt-2 pb-1">ABC
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-12 col-xs-12 mb-5">
-                                <img src="images/portpic1.jpg">
+                                <img src="assets/images/portpic1.jpg">
                                 <div class="h3 pt-2 pb-1">DEF
                                 </div>
                             </div>
@@ -73,12 +73,12 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-6 col-sm-12 col-xs-12 mb-5">
-                                <img src="images/portpic1.jpg">
+                                <img src="assets/images/portpic1.jpg">
                                 <div class="h3 pt-2 pb-1">HIJ
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-12 col-xs-12 mb-5">
-                                <img src="images/portpic1.jpg">
+                                <img src="assets/images/portpic1.jpg">
                                 <div class="h3 pt-2 pb-1">KLM
                                 </div>
                             </div>
@@ -88,7 +88,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-6 col-sm-12 col-xs-12 mb-5">
-                                <img src="images/portpic1.jpg">
+                                <img src="assets/images/portpic1.jpg">
                                 <div class="h3 pt-2 pb-1">NOP
                                 </div>
                             </div>
